# melorium-launcher

./: .gitignore  Banner Night Temple Loading.html  Banner Night Temple.html  CLAUDE.md  components.json  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
src-tauri/: .gitignore  Cargo.toml  cargo-errors.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  commands.rs  lib.rs  main.rs
src-tauri/src/modpack/: manager.rs  mod.rs  state.rs
src-tauri/src/modrinth/: error.rs  logger.rs  mod.rs
src-tauri/src/modrinth/api/: cache.rs  jre.rs  metadata.rs  minecraft_auth.rs  minecraft_skins.rs  mod.rs  process.rs  server_address.rs  settings.rs  worlds.rs
src-tauri/src/modrinth/api/minecraft_skins/: png_util.rs
src-tauri/src/modrinth/api/minecraft_skins/assets/default/: default_skins.rs
src-tauri/src/modrinth/api/pack/: install_from.rs  install_mrpack.rs
src-tauri/src/modrinth/api/pack/import/: atlauncher.rs  curseforge.rs  gdlauncher.rs  mmc.rs  mod.rs
src-tauri/src/modrinth/api/profile/: create.rs  mod.rs  update.rs
src-tauri/src/modrinth/event/: emit.rs  mod.rs
src-tauri/src/modrinth/launcher/: args.rs  download.rs  mod.rs  quick_play_version.rs
src-tauri/src/modrinth/state/: attached_world_data.rs  cache.rs  db.rs  dirs.rs  discord.rs  friends.rs  fs_watcher.rs  java_globals.rs  legacy_converter.rs  minecraft_auth.rs  mod.rs  mr_auth.rs  process.rs  profiles.rs  server_join_log.rs  settings.rs  tunnel.rs
src-tauri/src/modrinth/state/minecraft_skins/: mod.rs  mojang_api.rs
src-tauri/src/modrinth/util/: fetch.rs  io.rs  jre.rs  network.rs  platform.rs  rpc.rs  server_ping.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx  page.tsx
src/app/(app)/cosmetic/: page.tsx
src/app/(app)/mods/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/components/login/: BentoGrid.tsx  Login.tsx
src/components/play/: PlayCard.tsx
src/components/settings/: JavaSection.tsx  LauncherSection.tsx  MemorySection.tsx  ServiceSection.tsx  WindowSection.tsx
src/components/sidebar/: SideBar.tsx  SideBarItem.tsx  SideBarSlidingItem.tsx
src/components/titlebar/: Titlebar.tsx
src/modules/animate-ui/components/base/: checkbox.tsx  progress.tsx  switch.tsx
src/modules/animate-ui/components/text/: counter.tsx
src/modules/animate-ui/primitives/base/: progress.tsx
src/modules/animate-ui/primitives/texts/: counting-number.tsx
src/modules/indieui/ui/components/: ButtonGlaze.tsx
src/modules/magicui/ui/components/: ObsidianButton.tsx  RainbowButton.tsx  ShimmerButton.tsx
src/modules/shadcn/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  ripple-button.tsx  skeleton.tsx  slider.tsx
src/shared/features/bento/: BentoCard.tsx  BentoDots.tsx  BentoMaskCell.tsx  BentoMaskCellPastel.tsx  BentoMaskCellSolid.tsx  BentoMaskGrid.tsx  BentoSection.tsx  BentoTitle.tsx  bentoPositionMaps.ts
src/shared/features/brand/ui/: BrandText.tsx
src/shared/features/game/: Download.tsx  Launch.tsx
src/shared/features/icons/: IconBadge.tsx  Icons.tsx
src/shared/features/login/: LoginForm.tsx  LoginSection.tsx  login.schema.ts
src/shared/features/login/ui/: FieldLabel.tsx  FormDivider.tsx  LoginHeader.tsx  (+6 more)
src/shared/features/logo/: LogoBrand.tsx
src/shared/features/update/: UpdateScreen.tsx
src/shared/hooks/: useAppInit.ts
src/shared/lib/: formatSpeed.ts
src/shared/providers/: AppInitProvider.tsx  AuthGuardProvider.tsx  ModpackCheckProvider.tsx  Providers.tsx
src/store/: useAuthStore.ts  useGameStateStore.ts  useSettingsStore.ts  useSystemStore.ts  useUIStore.ts  useUpdateStore.ts
src/store/auth/: authSlice.ts
src/store/gamestate/: downloadSlice.ts  installSlice.ts  launchSlice.ts  modpackSlice.ts  updateSlice.ts
src/store/settings/: settingsSlice.ts
src/store/sidebar/: sidebarSlice.ts
src/store/system/: systemSlice.ts
(+29 files in other folders)
